# LearnOgl

./: CMakeLists.txt  README.md
assets/shaders/: grid.vert
include/: camera.h  gui.h  main.h  mesh.h  model.h  render.h  shader.h
include/glad/: glad.h
src/: glad.c  gui.cpp  main.cpp
